<resources>
    <string name="app_name">BookApp</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="rating">Rating</string>
    <string name="comment">Comment</string>
    <string name="detailed_view">Detailed View</string>
    <string name="add_book">Add Book</string>
    <string name="exit">Exit</string>
    <string name="average_rating">Average Rating</string>
    <string name="back">Back</string>
    <string name="show_books">Show Books</string>
</resources>