<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/txtTitle"
        android:autofillHints="20"
        android:hint="@string/title" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    <EditText android:id="@+id/txtAuthor"
        android:autofillHints="20"
        android:hint="@string/author" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    <EditText android:id="@+id/txtRating"
        android:autofillHints="200"
        android:hint="@string/rating" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:inputType="number" />
    <EditText android:id="@+id/txtComment"
        android:autofillHints="200"
        android:hint="@string/comment" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <Button android:id="@+id/btnAdd" android:text="@string/add_book" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <Button android:id="@+id/btnView" android:text="@string/detailed_view" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <Button android:id="@+id/btnExit" android:text="@string/exit" android:layout_width="match_parent" android:layout_height="wrap_content"/>

</LinearLayout>
