<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="492dp"
        app:srcCompat="@drawable/oip" />

    <TextView android:id="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button android:id="@+id/btnShow" android:text="@string/show_books" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <Button android:id="@+id/btnAverage" android:text="@string/average_rating" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <Button android:id="@+id/btnBack" android:text="@string/back" android:layout_width="match_parent" android:layout_height="wrap_content"/>



</LinearLayout>
